# email-backup-server

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  email.eml  email.md  email_to_markdown.py  pyproject.toml
src/: __init__.py  email_backup_server.py  email_viewer.py
