[project]
name = "email-backup"
version = "0.1.0"
description = "A minimal, secure SMTP server for email backup"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Thomas Smith"}
]
dependencies = [
    "aiosmtpd==1.4.4.post2",
    "pyspf>=2.0.14",
    "dnspython>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
email-backup-server = "src.email_backup_server:main"
email-viewer = "src.email_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
